# rhlf-book

./: README.md  hello.py  pyproject.toml
01/: 2.a-GettingStarted.ipynb
02/: 2.a-RL-environment.ipynb  2.b-RL-components.ipynb  2.b-RL-second-agent.ipynb  2.c-RL-first-agent.ipynb
03/: 3.a-policy-evals.ipynb  3.b-policy-iteration.ipynb  3.c-value-iteration.ipynb  gridworld.py  scratch.ipynb
04/: 4.a-mc_estimation.ipynb  gridworld.py  notes.md
